# APLOCAL

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ru/apsin/aplocal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: wg0.conf
app/src/main/cpp/: CMakeLists.txt  vpnbridge.cpp  wireguard_backend.cpp  wireguard_backend.h
app/src/main/cpp/include/: libwg-go.h
app/src/main/java/ru/apsin/aplocal/: MainActivity.kt  MyVpnService.kt  NotificationHelper.kt  VpnModuleActivity.kt  WgActLogic.kt  WireGuardBackend.kt
app/src/main/java/ru/apsin/aplocal/NativeBridge/: NativeBridge.kt
app/src/main/java/ru/apsin/aplocal/nativebridge/: NativeBridge.kt
app/src/main/res/layout/: activity_main.xml  activity_vpn_module.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ru/apsin/aplocal/: ExampleUnitTest.kt
gradle/: libs.versions.toml
